--- a/DATA/GCMS_quantify/GCMS_quantify.vbproj
+++ b/DATA/GCMS_quantify/GCMS_quantify.vbproj
@@ -120,6 +120,10 @@
       <Project>{6FF317FF-1A81-4272-A894-BFBFFB202B41}</Project>
       <Name>application.netCDF</Name>
     </ProjectReference>
+    <ProjectReference Include="..\ms2_math-core\ms2_math-core.vbproj">
+      <Project>{a2130297-2b4a-4b02-80b2-5cfa860f6dae}</Project>
+      <Name>ms2_math-core</Name>
+    </ProjectReference>
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.VisualBasic.targets" />
