--- a/DATA/math.MRM/TargetedMetabolomics.vbproj
+++ b/DATA/math.MRM/TargetedMetabolomics.vbproj
@@ -6,8 +6,8 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{A8A71B32-DAC6-4FA7-A5C1-0F5E5D5C9EB7}</ProjectGuid>
     <OutputType>Library</OutputType>
-    <RootNamespace>SMRUCC.MassSpectrum.Math.MRM</RootNamespace>
-    <AssemblyName>SMRUCC.MassSpectrum.Math.App.MRM</AssemblyName>
+    <RootNamespace>SMRUCC.MassSpectrum.Math</RootNamespace>
+    <AssemblyName>SMRUCC.MassSpectrum.Math.TargetedMetabolomics</AssemblyName>
     <FileAlignment>512</FileAlignment>
     <MyType>Windows</MyType>
     <TargetFrameworkVersion>v4.7</TargetFrameworkVersion>
@@ -18,7 +18,7 @@
     <DefineDebug>true</DefineDebug>
     <DefineTrace>true</DefineTrace>
     <OutputPath>bin\Debug\</OutputPath>
-    <DocumentationFile>SMRUCC.MassSpectrum.Math.App.MRM.xml</DocumentationFile>
+    <DocumentationFile>SMRUCC.MassSpectrum.Math.TargetedMetabolomics.xml</DocumentationFile>
     <NoWarn>42016,41999,42017,42018,42019,42032,42036,42020,42021,42022</NoWarn>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
@@ -27,7 +27,7 @@
     <DefineTrace>true</DefineTrace>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
-    <DocumentationFile>SMRUCC.MassSpectrum.Math.App.MRM.xml</DocumentationFile>
+    <DocumentationFile>SMRUCC.MassSpectrum.Math.TargetedMetabolomics.xml</DocumentationFile>
     <NoWarn>42016,41999,42017,42018,42019,42032,42036,42020,42021,42022</NoWarn>
   </PropertyGroup>
   <PropertyGroup>
@@ -45,7 +45,7 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Biodeep|AnyCPU'">
     <DefineTrace>true</DefineTrace>
     <OutputPath>bin\Biodeep\</OutputPath>
-    <DocumentationFile>SMRUCC.MassSpectrum.Math.App.MRM.xml</DocumentationFile>
+    <DocumentationFile>SMRUCC.MassSpectrum.Math.TargetedMetabolomics.xml</DocumentationFile>
     <Optimize>true</Optimize>
     <NoWarn>42016,41999,42017,42018,42019,42032,42036,42020,42021,42022</NoWarn>
     <DebugType>pdbonly</DebugType>
@@ -57,7 +57,7 @@
     <DefineDebug>true</DefineDebug>
     <DefineTrace>true</DefineTrace>
     <OutputPath>bin\</OutputPath>
-    <DocumentationFile>SMRUCC.MassSpectrum.Math.App.MRM.xml</DocumentationFile>
+    <DocumentationFile>SMRUCC.MassSpectrum.Math.TargetedMetabolomics.xml</DocumentationFile>
     <NoWarn>42016,41999,42017,42018,42019,42032,42036,42020,42021,42022</NoWarn>
     <DebugType>full</DebugType>
     <PlatformTarget>x64</PlatformTarget>
@@ -66,7 +66,7 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|x64'">
     <DefineTrace>true</DefineTrace>
     <OutputPath>bin\x64\Release\</OutputPath>
-    <DocumentationFile>SMRUCC.MassSpectrum.Math.App.MRM.xml</DocumentationFile>
+    <DocumentationFile>SMRUCC.MassSpectrum.Math.TargetedMetabolomics.xml</DocumentationFile>
     <Optimize>true</Optimize>
     <NoWarn>42016,41999,42017,42018,42019,42032,42036,42020,42021,42022</NoWarn>
     <DebugType>pdbonly</DebugType>
@@ -76,7 +76,7 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Biodeep|x64'">
     <DefineTrace>true</DefineTrace>
     <OutputPath>bin\x64\Biodeep\</OutputPath>
-    <DocumentationFile>SMRUCC.MassSpectrum.Math.App.MRM.xml</DocumentationFile>
+    <DocumentationFile>SMRUCC.MassSpectrum.Math.TargetedMetabolomics.xml</DocumentationFile>
     <Optimize>true</Optimize>
     <NoWarn>42016,41999,42017,42018,42019,42032,42036,42020,42021,42022</NoWarn>
     <DebugType>pdbonly</DebugType>
@@ -86,7 +86,7 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Biodeep_UNIX_x64|AnyCPU'">
     <DefineTrace>true</DefineTrace>
     <OutputPath>bin\Biodeep_UNIX_x64\</OutputPath>
-    <DocumentationFile>SMRUCC.MassSpectrum.Math.App.MRM.xml</DocumentationFile>
+    <DocumentationFile>SMRUCC.MassSpectrum.Math.TargetedMetabolomics.xml</DocumentationFile>
     <Optimize>true</Optimize>
     <NoWarn>42016,41999,42017,42018,42019,42032,42036,42020,42021,42022</NoWarn>
     <DebugType>pdbonly</DebugType>
@@ -96,7 +96,7 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Biodeep_UNIX_x64|x64'">
     <DefineTrace>true</DefineTrace>
     <OutputPath>bin\x64\Biodeep_UNIX_x64\</OutputPath>
-    <DocumentationFile>SMRUCC.MassSpectrum.Math.App.MRM.xml</DocumentationFile>
+    <DocumentationFile>SMRUCC.MassSpectrum.Math.TargetedMetabolomics.xml</DocumentationFile>
     <Optimize>true</Optimize>
     <NoWarn>42016,41999,42017,42018,42019,42032,42036,42020,42021,42022</NoWarn>
     <DebugType>pdbonly</DebugType>
@@ -126,17 +126,26 @@
     <Import Include="System.Threading.Tasks" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Data\MRMPeakTable.vb" />
-    <Compile Include="Data\Extensions.vb" />
-    <Compile Include="Data\TargetQuantification.vb" />
-    <Compile Include="Extensions.vb" />
-    <Compile Include="QuantitativeAnalysis\MRMPeak.vb" />
-    <Compile Include="QuantitativeAnalysis\FitModel.vb" />
-    <Compile Include="QuantitativeAnalysis\PeakArea.vb" />
-    <Compile Include="Standards.vb" />
-    <Compile Include="IS.vb" />
-    <Compile Include="QuantitativeAnalysis\Samples.vb" />
-    <Compile Include="QuantitativeAnalysis\StandardCurve.vb" />
+    <Compile Include="ContentUnits.vb" />
+    <Compile Include="GCMS\GCMSJson.vb" />
+    <Compile Include="GCMS\QuantifyAnalysis.vb" />
+    <Compile Include="GCMS\Vendors\agilentGCMS.vb" />
+    <Compile Include="GCMS\Vendors\agilentHPLC.vb" />
+    <Compile Include="GCMS\Vendors\aiaTemplate.vb" />
+    <Compile Include="GCMS\Vendors\brukerGCMS.vb" />
+    <Compile Include="GCMS\Vendors\finniganGCMS.vb" />
+    <Compile Include="GCMS\Vendors\shimadzuGCMS.vb" />
+    <Compile Include="MRM\Data\MRMPeakTable.vb" />
+    <Compile Include="MRM\Data\Extensions.vb" />
+    <Compile Include="MRM\Data\TargetQuantification.vb" />
+    <Compile Include="MRM\Extensions.vb" />
+    <Compile Include="MRM\QuantitativeAnalysis\MRMPeak.vb" />
+    <Compile Include="MRM\QuantitativeAnalysis\FitModel.vb" />
+    <Compile Include="MRM\QuantitativeAnalysis\PeakArea.vb" />
+    <Compile Include="MRM\Standards.vb" />
+    <Compile Include="MRM\IS.vb" />
+    <Compile Include="MRM\QuantitativeAnalysis\Samples.vb" />
+    <Compile Include="MRM\QuantitativeAnalysis\StandardCurve.vb" />
     <Compile Include="My Project\AssemblyInfo.vb" />
     <Compile Include="My Project\Application.Designer.vb">
       <AutoGen>True</AutoGen>
