--- a/DATA/ms2_math-core/MassSpectrum.math-core.vbproj
+++ b/DATA/ms2_math-core/MassSpectrum.math-core.vbproj
@@ -122,6 +122,7 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Data.Linq" />
     <Reference Include="System.Drawing" />
+    <Reference Include="System.Web.Extensions" />
     <Reference Include="System.Xml" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
