--- a/DATA/MetaDNA/MetaDNA/DESCRIPTION
+++ b/DATA/MetaDNA/MetaDNA/DESCRIPTION
@@ -2,6 +2,7 @@ Package: MetaDNA
 Type: Package
 Title: Identify unknown metabolite by metaDNA algorithm
 Version: 1.105.207834
+Date: 2019-05-16
 Author: xieguigang
 Maintainer: xieguigang <xie.guigang@gcmodeller.org>
 Description: Identify unknown metabolite by metaDNA algorithm.
@@ -9,3 +10,4 @@ License: MIT
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 5.0.1
+Suggests: VisualBasic.R
